--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -45,9 +45,7 @@ footer {
 
 }
 
-.project-title {
-    text-align: left
-}
+
 
 .intro-title,
 .lst-line,
@@ -232,9 +230,11 @@ p hr {
 }
 
 .proj-desc {
-    padding: 30px 0 0 30px;
+    padding: 30px 0 0 0px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
 }
 
@@ -411,6 +411,7 @@ p hr {
 
     .in-project-title {
         font-size: 30px;
+        text-align: center;
     }
 
     .intrested-work p {
