--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -6,6 +6,7 @@
 
 .title {
     font-size: 60px;
+    padding-bottom: 2rem;
 }
 
 .services-div,
@@ -23,7 +24,6 @@
 .services-div {
     gap: 10rem;
     justify-content: center;
-    align-items: center;
 }
 
 .reverse-div {
