--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -65,6 +65,9 @@
         flex-direction: column;
         gap: 1rem;
     }
+    .services-div{
+        align-items: center;
+    }
 
     .serviceImage {
         width: 250px;
