--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -74,8 +74,10 @@
         height: 250px;
     }
 
-    .title {
-        font-size: 35px;
+    
+    .title{
+        font-size: 28px;
+        padding-bottom: 0rem;
     }
 
     .sub-title {
@@ -85,6 +87,12 @@
     .reverse-div {
         justify-content: center;
         align-items: center;
+    }
+    .service-head-title {
+        font-size: 35px;
+        text-align: center;
+        width: 100%;
+        padding-bottom: 1.5rem;
     }
     
 
