--- a/src/components/Projects/project.css
+++ b/src/components/Projects/project.css
@@ -92,9 +92,17 @@
     .webpage {
         padding: 0rem 20px 50px 20px;
     }
-    .webpage-tile{
+
+    .webpage-tile {
         padding-top: 3rem;
         align-items: center;
+    }
+
+    .project-head-title {
+        font-size: 35px;
+        text-align: center;
+        width: 100%;
+        padding-bottom: 1.5rem;
     }
 
 
